--- a/src/App.css
+++ b/src/App.css
@@ -332,9 +332,15 @@ abbr {
     position: absolute;
     width: 2rem;
     height: 2rem;
+    /*
     border-width: .7rem;
     border-color: var(--c-corner-decor);
     border-style: solid solid none none;
+    
+    testing different syntax to see if color change correctly on light mode
+    */
+    border-left: .7rem solid var(--c-corner-decor);
+    border-top: .7rem solid var(--c-corner-decor);
     margin-left: -1.5rem;
     margin-top: -.2rem;
     z-index: 2;
