--- a/src/pages/landing/LandingPage.css
+++ b/src/pages/landing/LandingPage.css
@@ -11,9 +11,10 @@
 
 .welcome__text {
     display: block;
-    width: fit-content;
-    font-size: 2rem;
-    line-height: 2.5rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 2.2rem;
     color: var(--c-font-main);
     font-weight: 400;
     margin-top: 5rem;
@@ -25,7 +26,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 700;
-    font-size: 3.8rem;
+    font-size: 3.5rem;
     line-height: 4.5rem;
 }
 
@@ -54,9 +55,6 @@
     width: 100%;
     margin: auto;
 }
-
-
-
 
 
 .landing-info {
@@ -109,12 +107,14 @@
     }
 
     .welcome__text {
-        font-size: 2rem;
+        font-size: 1.8rem;
         margin: auto;
+        width: fit-content;
+        text-align: left;
     }
 
     .welcome__text--gradient {
-        font-size: 4.5rem;
+        font-size: 4.4rem;
     }
 
     .landing-info {
@@ -147,11 +147,11 @@
     }
 
     .welcome__text {
-        font-size: 2.3rem;
+        font-size: 2.1rem;
     }
 
     .welcome__text--gradient {
-        font-size: 5.2rem;
+        font-size: 5rem;
         line-height: 5.6rem;
     }
 
@@ -169,7 +169,7 @@
     }
 
     .welcome__text {
-        font-size: 2.6rem;
+        font-size: 2.4rem;
         line-height: 3rem;
     }
 
