--- a/src/pages/landing/LandingPage.css
+++ b/src/pages/landing/LandingPage.css
@@ -30,6 +30,7 @@
     line-height: 4.5rem;
 }
 
+/* assest -> svg */
 .landing-logo {
     display: block;
     width: 100%;
@@ -96,13 +97,11 @@
 @media only screen and (min-width: 800px) {
     .welcome__container {
         display: flex;
-        
         align-items: center;
         justify-content: space-around;
         max-width: 75rem;
         padding: 8rem 3rem 10rem;
         gap: 4rem;
-        
     }
 
     .welcome__text {
