--- a/src/pages/about/CommitteeTabs.css
+++ b/src/pages/about/CommitteeTabs.css
@@ -59,9 +59,9 @@
 
 
 
-/* -------------------------------------- */
-/* Comittee logo colors for tab animation */
-/* -------------------------------------- */
+/* ----------------------------------------------- */
+/* Comittee-logo color managment for tab animation */
+/* ----------------------------------------------- */
 
 
 /* fill color to match background of tab */
@@ -70,7 +70,7 @@
 }
 
 .committee-logo--fill-color {
-    fill: var(--c-font-box-unselected);
+    fill: var(--c-on-box-dim);
     transition: .2s;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .committee-logo--stroke-color {
-    stroke: var(--c-font-box-unselected);
+    stroke: var(--c-on-box-dim);
     transition: .2s;
 }
 
@@ -113,8 +113,6 @@
         flex-wrap: nowrap;
         justify-content: space-between;
     }
-
-    
 
     .committees .tabs__nav-title svg {
         max-width: 6rem;
@@ -155,5 +153,3 @@
         padding: 2rem 5rem 3rem 5rem;
     }
 }
-
-
