--- a/src/pages/landing/LandingPage.css
+++ b/src/pages/landing/LandingPage.css
@@ -30,7 +30,7 @@
     line-height: 4.5rem;
 }
 
-/* assest -> svg */
+/* logo component from assets -> svg */
 .landing-logo {
     display: block;
     width: 100%;
@@ -45,7 +45,7 @@
 
 .landing-logo__corner {
     fill: none;
-    stroke: var(--c-orange);
+    stroke: var(--c-primary);
     stroke-miterlimit: 10;
     stroke-width: 3.5px;
 }
@@ -80,7 +80,7 @@
 }
 
 .landing-info__link {
-    padding: .5rem .8rem .5rem 0;
+    padding: .7rem 1rem .7rem 0;
     font-size: 1.3rem;
     width: fit-content;
     display: block;
