--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -18,11 +18,11 @@
 }
 
 .accordion__icon--left {
-    font-size: 2rem;
+    font-size: 2.2rem;
     position: absolute;
-    margin-left: -2rem;
+    margin-left: -2.7rem;
     transition: .3s;
-    color: var(--c-orange);
+    color: var(--c-link);
 }
 
 .accordion__nav-item--active .accordion__icon--left {
