--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -5,7 +5,17 @@
 }
 
 .filter__content {
-    padding: .5rem 1rem 1rem 1rem;
+    padding: 1rem;
+}
+
+.filter__filter-icon {
+    font-size: 1.7rem;
+}
+
+.filter__reset-icon {
+    line-height: inherit;
+    font-size: 1.2rem;
+    vertical-align: top;
 }
 
 .filter__search-bar {
@@ -17,12 +27,17 @@
 .filter__search-input {
     width: 100%;
     border: none;
-    padding: 0 0 .3rem 2rem;
+    padding: 0 0 .3rem 2.2rem;
     margin-left: -2rem;
     background: none;
     border-bottom: .2rem solid #6d6d6d;
     font-size: 1.2rem;
     line-height: 2rem;
+
+    /* prevent rounded corners on mobile browsers */
+    -webkit-appearance: none;
+    -webkit-border-radius: 0; 
+    border-radius: none;
 }
 
 .filter__search-input::placeholder {
@@ -30,7 +45,7 @@
 }
 
 .filter__search-input:focus  {
-    border-color: var(--c-orange);
+    border-color: var(--c-link);
     outline: none;
 }
 
@@ -38,13 +53,13 @@
     display: block;
     width: 2rem;
     z-index: 5;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     line-height: 2rem;
     color: #6d6d6d;
 }
 
 .filter__search-bar:focus-within .filter__search-icon {
-    color: var(--c-orange);
+    color: var(--c-link);
 }
 
 .filter__checkboxes {
@@ -68,11 +83,11 @@
 }
 
 .filter__btn--reset {
-    background-color: var(--c-btn-reset);
+    background-color: var(--c-btn-on-box);
 }
 
 .filter__btn--reset:hover {
-    background-color: var(--c-btn-reset-hover);
+    background-color: var(--c-btn-on-box-hover);
 }
 
 .checkbox {
@@ -122,16 +137,12 @@
 }
 
 .checkbox__input:checked ~ .checkbox__label:before {
-    background-color: var(--c-orange);
-    border-color: var(--c-orange);
+    background-color: var(--c-primary);
+    border-color: var(--c-primary);
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
 }
 
 @media only screen and (min-width: 400px) {
-    
-    .filter__content {
-        padding: 1.5rem;
-    }
 
     .filter__checkboxes {
         flex-direction: row;
@@ -173,6 +184,14 @@
 
     .filter__btn {
         width: 100%;
+    }
+
+    .filter__btn--reset {
+        background-color: var(--c-btn);
+    }
+    
+    .filter__btn--reset:hover {
+        background-color: var(--c-btn-hover);
     }
     
 }
