--- a/src/components/logchamp/LogChamp.css
+++ b/src/components/logchamp/LogChamp.css
@@ -7,7 +7,7 @@
 .logchamp__title {
     margin-top: 1rem;
     font-size: 1.2rem;
-    color: var(--c-orange);
+    color: var(--c-primary);
     font-weight: 500;
 }
 
