--- a/src/components/tabs/Tabs.css
+++ b/src/components/tabs/Tabs.css
@@ -31,7 +31,7 @@
     display: block;
     margin: auto;
     transition: .2s;
-    color: var(--c-font-box-unselected);
+    color: var(--c-on-box-dim);
     padding: .5rem;
     border-bottom: .3rem solid var(--c-bg-box);
 }
@@ -42,7 +42,7 @@
 
 .tabs__nav-title--active {
     color: var(--c-font-main);
-    border-color: var(--c-orange);
+    border-color: var(--c-primary);
 }
 
 .tabs__content {
