--- a/src/components/themetoggle/ThemeToggle.css
+++ b/src/components/themetoggle/ThemeToggle.css
@@ -1,23 +1,35 @@
 .theme-toggle {
     display: block;
     cursor: pointer;
+    border-radius: .3rem;
+}
+
+.theme-toggle:hover {
+    background-color: rgb(90,90,90,0.1);
 }
 
 .theme-toggle__svg {
     height: 3rem;
-    padding: .8rem;
-    fill: white;
+    padding: .8rem .8rem;
+}
+
+.light .theme-toggle__svg {
+    fill: rgb(94, 73, 230);
+}
+
+.dark .theme-toggle__svg {
+    fill: rgb(205, 166, 10);
 }
 
 .theme-toggle__sun-ray {
     transition: .4s;
 }
 
-.dark .theme-toggle__sun-ray {
+.light .theme-toggle__sun-ray {
     opacity: 0;
 }
 
-.light .theme-toggle__sun-ray {
+.dark .theme-toggle__sun-ray {
     opacity: 1;
 }
 
@@ -26,7 +38,7 @@
     z-index: 999;
 }
 
-.light .theme-toggle__mask-circle {
+.dark .theme-toggle__mask-circle {
     transform: translate(2rem, -1rem);
 }
 
@@ -35,6 +47,6 @@
     transition: .4s;
 }
 
-.dark .theme-toggle__sun-moon {
+.light .theme-toggle__sun-moon {
     transform: scale(2);
 }
