--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,7 +1,11 @@
+
 .about-section {
-    margin-bottom: 3rem;
+    margin-bottom: 3rem; /* creates nice spacing between content */
 }
 
+
+/* gave headers and paragrapfs margins instead of giving it to 
+   the 'about-section' class because the 'tabs-section' is an exception */
 .about-section__heading {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -12,21 +16,11 @@
     margin-right: 1rem;
 }
 
+
+/* intro section */
+
 .about-intro__p {
     max-width: 50rem;
-}
-
-.about-public-docs ul {
-    list-style: none;
-}
-
-.about-public-docs ul li:before {
-    content: '\2022';
-    color: var(--c-orange);
-    font-weight: bold;
-    display: inline-block;
-    width: 1em;
-    margin-left: 1em;
 }
 
 .about-intro__grid-container {
@@ -41,10 +35,18 @@
     width: 100%;
 }
 
+/* BEM exception becasue its a picture component */
 .about-intro__grid-container picture {
     max-width: 33rem;
     width: 100%;
     margin: 3rem 1rem 1rem 1rem;
+}
+
+
+/* public docs dection */
+
+.about-public-docs__list {
+    margin: 0 1rem;
 }
 
 
