--- a/src/pages/eventlist/EventList.css
+++ b/src/pages/eventlist/EventList.css
@@ -1,15 +1,13 @@
-.event-page {
-  width: 100%;
-}
-
 .event-list {
   list-style-type: none;
 }
 
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1000px) {
 
-  
+  .event-list {
+    margin: 0 1rem;
+  }
 
 }
 
@@ -17,7 +15,7 @@
 
   .event-grid-wrapper {
     display: grid;
-    grid-template-columns: auto 18rem;
+    grid-template-columns: auto 17rem;
     grid-template-areas: 'left right';
   }  
 
