--- a/src/components/logchamp/LogChamp.css
+++ b/src/components/logchamp/LogChamp.css
@@ -7,7 +7,7 @@
 .logchamp__title {
     margin-top: 1rem;
     font-size: 1.2rem;
-    color: var(--c-orange);
+    color: var(--c-primary);
     font-weight: 500;
 }
 
@@ -17,4 +17,5 @@
 
 .logchamp p:last-child {
     margin-top: 1rem;
+    font-size: .9rem; /* some idiot's discord tag was too long */
 }
