--- a/src/assets/svg/logos/CtfkomLogoAnimation.css
+++ b/src/assets/svg/logos/CtfkomLogoAnimation.css
@@ -36,6 +36,7 @@
     @keyframes flagpiece3 {
         50% {
             d: path('m 70 35 l 0 0 l 5 25 l 0 0 z');
+            stroke: white;
         }
         51% {
             stroke: none;
