--- a/src/components/datetile/DateTile.css
+++ b/src/components/datetile/DateTile.css
@@ -28,7 +28,7 @@
 	content: 'Ny';
 	line-height: 1.5rem;
 	background: linear-gradient(132deg, rgb(255, 89, 0) 0%, rgb(254, 182, 0) 100%);
-	box-shadow: var(--c-bg-body) 0 0 0 .25rem;
+	box-shadow: #181818 0 0 0 .25rem;
 	display: block;
 	position: absolute;
 	margin-left: -1.3rem;
