--- a/src/components/langtoggle/LangToggle.css
+++ b/src/components/langtoggle/LangToggle.css
@@ -1,34 +1,19 @@
 .lang-toggle {
     cursor: pointer;
     padding: .5rem;
+    padding-right: 1rem;
     line-height: 2rem;
-    font-size: 1rem;
-    color: var(--c-font-main);
-    width: 4.3rem;
+    font-size: 1.5rem;
+    color: white;
+    width: 4rem;
     text-align: center;
-    border-radius: .3rem;
 }
 
-.lang-toggle:hover {
-    background-color: rgb(100,100,100,0.1);
-}
-
-.lang-toggle__icon {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    margin-top: -.1rem;
-}
-
-.lang-toggle__icon--jump {
-    animation: jump .4s 1;
-}
-
-@keyframes jump {
-    40% {
-        transform: translateY(-.3rem);
+@media only screen and (min-width: 800px) {
+    .lang-toggle {
+        padding: 1rem.5rem;
+        line-height: 1rem;
+        font-size: 1rem;
+        width: 3rem;
     }
-}
-
-.topbar--open .lang-toggle, .topbar--open .lang-toggle__icon {
-    color: var(--c-white);
 }
