--- a/src/components/themetoggle/ThemeToggle.css
+++ b/src/components/themetoggle/ThemeToggle.css
@@ -1,35 +1,23 @@
 .theme-toggle {
     display: block;
     cursor: pointer;
-    border-radius: .3rem;
-}
-
-.theme-toggle:hover {
-    background-color: rgb(90,90,90,0.1);
 }
 
 .theme-toggle__svg {
     height: 3rem;
-    padding: .8rem .8rem;
-}
-
-.light .theme-toggle__svg {
-    fill: rgb(94, 73, 230);
-}
-
-.dark .theme-toggle__svg {
-    fill: rgb(205, 166, 10);
+    padding: .8rem;
+    fill: white;
 }
 
 .theme-toggle__sun-ray {
     transition: .4s;
 }
 
-.light .theme-toggle__sun-ray {
+.dark .theme-toggle__sun-ray {
     opacity: 0;
 }
 
-.dark .theme-toggle__sun-ray {
+.light .theme-toggle__sun-ray {
     opacity: 1;
 }
 
@@ -38,7 +26,7 @@
     z-index: 999;
 }
 
-.dark .theme-toggle__mask-circle {
+.light .theme-toggle__mask-circle {
     transform: translate(2rem, -1rem);
 }
 
@@ -47,6 +35,6 @@
     transition: .4s;
 }
 
-.light .theme-toggle__sun-moon {
-    transform: scale(1.9);
+.dark .theme-toggle__sun-moon {
+    transform: scale(2);
 }
