--- a/src/pages/landing/LandingPage.css
+++ b/src/pages/landing/LandingPage.css
@@ -30,7 +30,6 @@
     line-height: 4.5rem;
 }
 
-/* logo component from assets -> svg */
 .landing-logo {
     display: block;
     width: 100%;
@@ -45,7 +44,7 @@
 
 .landing-logo__corner {
     fill: none;
-    stroke: var(--c-primary);
+    stroke: var(--c-orange);
     stroke-miterlimit: 10;
     stroke-width: 3.5px;
 }
@@ -80,7 +79,7 @@
 }
 
 .landing-info__link {
-    padding: .7rem 1rem .7rem 0;
+    padding: .5rem .8rem .5rem 0;
     font-size: 1.3rem;
     width: fit-content;
     display: block;
@@ -97,11 +96,13 @@
 @media only screen and (min-width: 800px) {
     .welcome__container {
         display: flex;
+        
         align-items: center;
         justify-content: space-around;
         max-width: 75rem;
         padding: 8rem 3rem 10rem;
         gap: 4rem;
+        
     }
 
     .welcome__text {
